[tool.poetry]
name = "twingate-alloc"
version = "0.1.0"
description = "A small memory allocator implementation"
authors = ["David Guaraglia <david@guaraglia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
